--- a/res/MEE_GUI.ui
+++ b/res/MEE_GUI.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>479</width>
+    <width>540</width>
     <height>585</height>
    </rect>
   </property>
@@ -17,76 +17,43 @@
    <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="layoutDirection">
-      <enum>Qt::RightToLeft</enum>
+      <enum>Qt::LeftToRight</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
      </property>
      <property name="title">
       <string>Resources panel</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="3">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Library</string>
-        </property>
-       </widget>
-      </item>
+      <property name="sizeConstraint">
+       <enum>QLayout::SetFixedSize</enum>
+      </property>
+      <property name="margin">
+       <number>10</number>
+      </property>
       <item row="0" column="0">
-       <widget class="QPushButton" name="pushButton">
-        <property name="text">
-         <string>Load Model</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="3">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>Model name</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QLineEdit" name="lineEdit">
-        <property name="text">
-         <string>full name of the modelica file</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="3">
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>Outputs</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="2">
-       <widget class="QLineEdit" name="lineEdit_4">
-        <property name="text">
-         <string>full path to store outputs</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QLineEdit" name="lineEdit_2">
-        <property name="text">
-         <string>full name of the modelica library</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QPushButton" name="pushButton_9">
-        <property name="text">
-         <string>Save Resources</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="3">
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Model file</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="1" column="2">
+       <widget class="QPushButton" name="pushButton_2">
+        <property name="text">
+         <string>Load Library</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QPushButton" name="pushButton_3">
+        <property name="text">
+         <string>Select Model</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="2">
        <widget class="QPushButton" name="pushButton_4">
         <property name="text">
          <string>Output Path</string>
@@ -94,27 +61,48 @@
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QPushButton" name="pushButton_3">
+       <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Select Model</string>
+         <string>Model name</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>Load Model</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Outputs</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Load Library</string>
+         <string>Library</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1" colspan="2">
-       <widget class="QPushButton" name="pushButton_5">
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="lineEdit">
         <property name="text">
-         <string>Load Resources</string>
+         <string>full name of the modelica file</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="2">
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="lineEdit_2">
+        <property name="text">
+         <string>full name of the modelica library</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
        <widget class="QComboBox" name="comboBox_5">
         <property name="layoutDirection">
          <enum>Qt::LeftToRight</enum>
@@ -126,6 +114,27 @@
         </item>
        </widget>
       </item>
+      <item row="3" column="1">
+       <widget class="QLineEdit" name="lineEdit_4">
+        <property name="text">
+         <string>full path to store outputs</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="2">
+       <widget class="QPushButton" name="pushButton_5">
+        <property name="text">
+         <string>Load Resources</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QPushButton" name="pushButton_9">
+        <property name="text">
+         <string>Save Resources</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
@@ -135,120 +144,25 @@
       <string>Configuration panel</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="2" column="1">
-       <widget class="QLineEdit" name="lineEdit_5"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QRadioButton" name="radioButton_2">
-        <property name="text">
-         <string>JModelica</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QRadioButton" name="radioButton">
-        <property name="text">
-         <string>OpenModelica</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>Start time</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="2">
-       <widget class="QLabel" name="label_6">
-        <property name="text">
-         <string>Stop time</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="3">
-       <widget class="QLineEdit" name="lineEdit_6"/>
-      </item>
-      <item row="3" column="2">
-       <widget class="QLabel" name="label_8">
-        <property name="text">
-         <string>Algorithm(JM)</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_7">
-        <property name="text">
-         <string>Solver</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QRadioButton" name="radioButton_3">
-        <property name="text">
-         <string>Dymola</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
+      <item row="6" column="0">
        <widget class="QLabel" name="label_10">
         <property name="text">
          <string>Tolerance</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
-       <widget class="QLineEdit" name="lineEdit_7"/>
-      </item>
-      <item row="6" column="1">
-       <widget class="QComboBox" name="comboBox_3">
-        <item>
-         <property name="text">
-          <string>.h5</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>.mat</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_9">
-        <property name="text">
-         <string>Interval</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="3">
-       <widget class="QComboBox" name="comboBox_2">
-        <item>
-         <property name="text">
-          <string>AssimuloAlg</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>New Item</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>New Item2</string>
-         </property>
-        </item>
-       </widget>
+      <item row="3" column="1">
+       <widget class="QLineEdit" name="lineEdit_5"/>
       </item>
       <item row="5" column="1">
-       <widget class="QLineEdit" name="lineEdit_8"/>
+       <widget class="QLineEdit" name="lineEdit_7"/>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <widget class="QComboBox" name="comboBox">
         <property name="editable">
          <bool>false</bool>
         </property>
-        <property name="currentText">
+        <property name="currentText" stdset="0">
          <string>dassl</string>
         </property>
         <item>
@@ -268,28 +182,116 @@
         </item>
        </widget>
       </item>
-      <item row="6" column="2">
+      <item row="6" column="1">
+       <widget class="QLineEdit" name="lineEdit_8"/>
+      </item>
+      <item row="7" column="2">
        <widget class="QLabel" name="label_12">
         <property name="text">
          <string>Initialize(JM)</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>Solver</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="3">
+       <widget class="QLineEdit" name="lineEdit_6"/>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_9">
+        <property name="text">
+         <string>Interval</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QRadioButton" name="radioButton_3">
+        <property name="text">
+         <string>Dymola</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="3">
+       <widget class="QComboBox" name="comboBox_2">
+        <item>
+         <property name="text">
+          <string>AssimuloAlg</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>New Item</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>New Item2</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="7" column="0">
        <widget class="QLabel" name="label_11">
         <property name="text">
          <string>Output format</string>
         </property>
        </widget>
       </item>
-      <item row="7" column="0" colspan="2">
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Start time</string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0" colspan="2">
        <widget class="QPushButton" name="pushButton_6">
         <property name="text">
          <string>Save Configuration</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="3">
+      <item row="8" column="2" colspan="2">
+       <widget class="QPushButton" name="pushButton_7">
+        <property name="text">
+         <string>Load Configuration</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="2">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Stop time</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="1">
+       <widget class="QComboBox" name="comboBox_3">
+        <item>
+         <property name="text">
+          <string>.h5</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>.mat</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QRadioButton" name="radioButton">
+        <property name="text">
+         <string>OpenModelica</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="3">
        <widget class="QComboBox" name="comboBox_4">
         <item>
          <property name="text">
@@ -303,10 +305,17 @@
         </item>
        </widget>
       </item>
-      <item row="7" column="2" colspan="2">
-       <widget class="QPushButton" name="pushButton_7">
+      <item row="4" column="2">
+       <widget class="QLabel" name="label_8">
         <property name="text">
-         <string>Load Configuration</string>
+         <string>Algorithm(JM)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QRadioButton" name="radioButton_2">
+        <property name="text">
+         <string>JModelica</string>
         </property>
        </widget>
       </item>
