--- a/res/mee_simulation_gui.ui
+++ b/res/mee_simulation_gui.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>mee_simulation_gui</class>
+ <widget class="QDialog" name="mee_simulation_gui">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>573</width>
-    <height>604</height>
+    <width>572</width>
+    <height>572</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,21 +23,21 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>230</y>
+     <y>220</y>
      <width>551</width>
-     <height>312</height>
+     <height>281</height>
     </rect>
    </property>
    <property name="title">
     <string>Configuration panel</string>
    </property>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>9</x>
-      <y>26</y>
+      <x>10</x>
+      <y>20</y>
       <width>531</width>
-      <height>281</height>
+      <height>31</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
@@ -62,41 +62,100 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
+    </layout>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>531</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_4">
+     <item row="0" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>Start time</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="txt_startTime"/>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="txt_startTime">
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
      </item>
-     <item row="1" column="2">
+     <item row="0" column="2">
       <widget class="QLabel" name="label_6">
        <property name="text">
         <string>Stop time</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="3">
-      <widget class="QLineEdit" name="btn_stopTime"/>
+     <item row="0" column="3">
+      <widget class="QLineEdit" name="txt_stopTime"/>
      </item>
-     <item row="2" column="0">
+     <item row="1" column="0">
       <widget class="QLabel" name="label_7">
        <property name="text">
         <string>Solver</string>
        </property>
       </widget>
      </item>
+     <item row="1" column="2">
+      <widget class="QLabel" name="label_8">
+       <property name="text">
+        <string>Algorithm(JM)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_9">
+       <property name="text">
+        <string>Interval</string>
+       </property>
+      </widget>
+     </item>
      <item row="2" column="1">
+      <widget class="QLineEdit" name="txt_interval">
+       <property name="text">
+        <string>1000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>Tolerance</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="txt_tolerance">
+       <property name="text">
+        <string>0.0001</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_11">
+       <property name="text">
+        <string>Output format</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="2">
+      <widget class="QLabel" name="label_12">
+       <property name="text">
+        <string>Initialize(JM)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
       <widget class="QComboBox" name="cbx_solver">
-       <property name="editable">
-        <bool>false</bool>
-       </property>
-       <property name="currentText" stdset="0">
-        <string>dassl</string>
-       </property>
        <item>
         <property name="text">
          <string>dassl</string>
@@ -107,76 +166,21 @@
          <string>Rkfix2</string>
         </property>
        </item>
-       <item>
-        <property name="text">
-         <string>Rkfix4</string>
-        </property>
-       </item>
       </widget>
      </item>
-     <item row="2" column="2">
-      <widget class="QLabel" name="label_8">
-       <property name="text">
-        <string>Algorithm(JM)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="3">
-      <widget class="QComboBox" name="cbx_jmAlgorithm">
-       <item>
-        <property name="text">
-         <string>AssimuloAlg</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>New Item</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>New Item2</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_9">
-       <property name="text">
-        <string>Interval</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="txt_interval"/>
-     </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="label_10">
-       <property name="text">
-        <string>Tolerance</string>
-       </property>
-      </widget>
+     <item row="1" column="3">
+      <widget class="QComboBox" name="cbx_jmAlgorithm"/>
      </item>
      <item row="4" column="1">
-      <widget class="QLineEdit" name="txt_tolerance"/>
-     </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_11">
-       <property name="text">
-        <string>Output format</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
       <widget class="QComboBox" name="cbx_format">
        <item>
         <property name="text">
-         <string>.h5</string>
+         <string>.mat</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>.mat</string>
+         <string>.h5</string>
         </property>
        </item>
        <item>
@@ -186,14 +190,7 @@
        </item>
       </widget>
      </item>
-     <item row="5" column="2">
-      <widget class="QLabel" name="label_12">
-       <property name="text">
-        <string>Initialize(JM)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="3">
+     <item row="4" column="3">
       <widget class="QComboBox" name="cbx_jmInit">
        <item>
         <property name="text">
@@ -207,49 +204,40 @@
        </item>
       </widget>
      </item>
-     <item row="6" column="2" colspan="2">
-      <widget class="QToolButton" name="btn_loadConfig">
-       <property name="text">
-        <string>Load Configuration</string>
-       </property>
-      </widget>
-     </item>
-     <item row="6" column="0" colspan="2">
+    </layout>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>230</y>
+      <width>391</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_5">
+     <item row="0" column="0">
       <widget class="QToolButton" name="btn_saveConfig">
        <property name="text">
         <string>Save Configuration</string>
        </property>
       </widget>
      </item>
+     <item row="0" column="1">
+      <widget class="QToolButton" name="btn_loadConfig">
+       <property name="text">
+        <string>Load Configuration</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
-   <zorder>rbt_omc</zorder>
-   <zorder>rbt_jm</zorder>
-   <zorder>label_5</zorder>
-   <zorder>txt_startTime</zorder>
-   <zorder>label_6</zorder>
-   <zorder>btn_stopTime</zorder>
-   <zorder>rbt_dy</zorder>
-   <zorder>label_7</zorder>
-   <zorder>cbx_solver</zorder>
-   <zorder>label_8</zorder>
-   <zorder>cbx_jmAlgorithm</zorder>
-   <zorder>label_9</zorder>
-   <zorder>txt_interval</zorder>
-   <zorder>label_10</zorder>
-   <zorder>txt_tolerance</zorder>
-   <zorder>label_11</zorder>
-   <zorder>cbx_format</zorder>
-   <zorder>label_12</zorder>
-   <zorder>cbx_jmInit</zorder>
-   <zorder>btn_saveConfig</zorder>
-   <zorder>btn_loadConfig</zorder>
   </widget>
   <widget class="QProgressBar" name="progressBar">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>580</y>
+     <y>540</y>
      <width>551</width>
      <height>21</height>
     </rect>
@@ -270,7 +258,7 @@
      <x>10</x>
      <y>0</y>
      <width>551</width>
-     <height>231</height>
+     <height>211</height>
     </rect>
    </property>
    <property name="layoutDirection">
@@ -282,13 +270,39 @@
    <property name="title">
     <string>Resources panel</string>
    </property>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>5</x>
-      <y>27</y>
+      <x>70</x>
+      <y>160</y>
+      <width>401</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_3">
+     <item row="0" column="0">
+      <widget class="QToolButton" name="btn_saveResources">
+       <property name="text">
+        <string>Save Resources</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QToolButton" name="btn_loadResources">
+       <property name="text">
+        <string>Load Resources</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>7</x>
+      <y>17</y>
       <width>541</width>
-      <height>201</height>
+      <height>141</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -299,10 +313,17 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1" colspan="2">
+     <item row="0" column="1">
       <widget class="QLineEdit" name="txt_modelFile">
        <property name="text">
         <string>No file selected!</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QToolButton" name="btn_loadModelFile">
+       <property name="text">
+        <string>Load Model</string>
        </property>
       </widget>
      </item>
@@ -313,10 +334,17 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1" colspan="2">
+     <item row="1" column="1">
       <widget class="QLineEdit" name="txt_libraryFile">
        <property name="text">
         <string>No file selected!</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QToolButton" name="btn_loadLibraryFile">
+       <property name="text">
+        <string>Load Library</string>
        </property>
       </widget>
      </item>
@@ -333,61 +361,7 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1" colspan="2">
-      <widget class="QComboBox" name="cbx_modelList">
-       <property name="layoutDirection">
-        <enum>Qt::LeftToRight</enum>
-       </property>
-       <item>
-        <property name="text">
-         <string>model name</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_4">
-       <property name="text">
-        <string>Outputs</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1" colspan="2">
-      <widget class="QLineEdit" name="txt_outPath">
-       <property name="text">
-        <string>No path selected!</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="3">
-      <widget class="QToolButton" name="btn_loadModelFile">
-       <property name="text">
-        <string>Load Model</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0" colspan="2">
-      <widget class="QToolButton" name="btn_saveResources">
-       <property name="text">
-        <string>Save Resources</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="2" colspan="2">
-      <widget class="QToolButton" name="btn_loadResources">
-       <property name="text">
-        <string>Load Resources</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="3">
-      <widget class="QToolButton" name="btn_loadOutPath">
-       <property name="text">
-        <string>Output Path</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="3">
+     <item row="2" column="2">
       <widget class="QToolButton" name="btn_loadModel">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -400,12 +374,29 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="3">
-      <widget class="QToolButton" name="btn_loadLibraryFile">
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Load Library</string>
+        <string>Outputs</string>
        </property>
       </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="txt_outPath">
+       <property name="text">
+        <string>No path selected!</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="2">
+      <widget class="QToolButton" name="btn_loadOutPath">
+       <property name="text">
+        <string>Output Path</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QComboBox" name="cbx_modelList"/>
      </item>
     </layout>
    </widget>
@@ -414,20 +405,15 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>550</y>
+     <y>510</y>
      <width>551</width>
-     <height>31</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>Simulate</string>
    </property>
   </widget>
-  <zorder>groupBox</zorder>
-  <zorder>btn_simulate</zorder>
-  <zorder>progressBar</zorder>
-  <zorder>groupBox_2</zorder>
-  <zorder>btn_simulate</zorder>
  </widget>
  <resources/>
  <connections/>
