--- a/res/mee_simulation_gui_2.ui
+++ b/res/mee_simulation_gui_2.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>572</width>
+    <width>770</width>
     <height>583</height>
    </rect>
   </property>
@@ -413,6 +413,29 @@
    <property name="text">
     <string>Simulate</string>
    </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_3">
+   <property name="geometry">
+    <rect>
+     <x>569</x>
+     <y>9</y>
+     <width>191</width>
+     <height>561</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Outputs</string>
+   </property>
+   <widget class="QTreeView" name="treeView">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>171</width>
+      <height>471</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
