--- a/res/mae_simulation_gui.ui
+++ b/res/mae_simulation_gui.ui
@@ -85,53 +85,70 @@
       <property name="title">
        <string>Quantitative Analysis</string>
       </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
-        <widget class="QPushButton" name="btn_era">
-         <property name="text">
-          <string>ERA Method</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0" colspan="3">
-        <widget class="MatplotlibWidget" name="mplot_validation" native="true">
-         <property name="autoFillBackground">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QPushButton" name="btn_saveResults">
-         <property name="text">
-          <string>Save Results</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QPushButton" name="btn_loadResults">
-         <property name="text">
-          <string>Load Results</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QPushButton" name="btn_modeEst">
-         <property name="text">
-          <string>Mode Estimation</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0" colspan="3">
-        <widget class="QListWidget" name="lst_report"/>
-       </item>
-       <item row="0" column="2">
-        <widget class="QPushButton" name="btn_rmse">
-         <property name="text">
-          <string>RMSE</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
+      <widget class="QWidget" name="layoutWidget">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>20</y>
+         <width>501</width>
+         <height>771</height>
+        </rect>
+       </property>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="6" column="1">
+         <widget class="QPushButton" name="btn_loadResults">
+          <property name="text">
+           <string>Load Results</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="QPushButton" name="btn_analysis">
+          <property name="text">
+           <string>Compute Analysis</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0">
+         <widget class="QPushButton" name="btn_saveResults">
+          <property name="text">
+           <string>Save Results</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0" colspan="3">
+         <widget class="MatplotlibWidget" name="mplot_validation" native="true">
+          <property name="autoFillBackground">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QRadioButton" name="rbt_rmse">
+          <property name="text">
+           <string>RMSE</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" colspan="2">
+         <widget class="QRadioButton" name="rbt_modeEstimation">
+          <property name="text">
+           <string>Mode Estimation</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QRadioButton" name="rbt_era">
+          <property name="text">
+           <string>ERA Method</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" rowspan="5" colspan="2">
+         <widget class="QListWidget" name="lst_report"/>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
