New UI for m2m and plot
Try to include ModelicaRes, issues with parameters units
M2M based on CIM profiles, only GUI

--- a/res/mee_simulation_gui.ui
+++ b/res/mee_simulation_gui.ui
@@ -83,7 +83,7 @@
       </widget>
      </item>
      <item row="0" column="3">
-      <widget class="QPushButton" name="btnSaveExperiment">
+      <widget class="QPushButton" name="btnPlot">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
          <horstretch>0</horstretch>
