--- a/res/mee_loadsources_gui.ui
+++ b/res/mee_loadsources_gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>572</width>
-    <height>228</height>
+    <width>632</width>
+    <height>268</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
-     <width>551</width>
-     <height>211</height>
+     <y>0</y>
+     <width>611</width>
+     <height>261</height>
     </rect>
    </property>
    <property name="layoutDirection">
@@ -34,8 +34,8 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>160</y>
+      <x>110</x>
+      <y>210</y>
       <width>401</width>
       <height>41</height>
      </rect>
@@ -62,13 +62,19 @@
      <rect>
       <x>7</x>
       <y>17</y>
-      <width>541</width>
-      <height>141</height>
+      <width>597</width>
+      <height>189</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
       <widget class="QLabel" name="label">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>Model Folder</string>
        </property>
@@ -76,6 +82,18 @@
      </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="txtModelsFolder">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>375</width>
+         <height>16</height>
+        </size>
+       </property>
        <property name="text">
         <string>No file selected!</string>
        </property>
@@ -83,6 +101,12 @@
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_2">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>Library Folder</string>
        </property>
@@ -90,6 +114,18 @@
      </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="txtLibraryFolder">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>375</width>
+         <height>16</height>
+        </size>
+       </property>
        <property name="text">
         <string>No file selected!</string>
        </property>
@@ -97,6 +133,18 @@
      </item>
      <item row="4" column="1">
       <widget class="QLineEdit" name="txtOutputFolder">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>375</width>
+         <height>16</height>
+        </size>
+       </property>
        <property name="text">
         <string>No path selected!</string>
        </property>
@@ -104,6 +152,12 @@
      </item>
      <item row="4" column="0">
       <widget class="QLabel" name="label_4">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>Outputs Folder</string>
        </property>
@@ -138,7 +192,7 @@
         <bool>false</bool>
        </property>
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -150,6 +204,12 @@
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label_5">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>CIM Models Folder</string>
        </property>
@@ -157,6 +217,12 @@
      </item>
      <item row="0" column="2">
       <widget class="QPushButton" name="btnCIMFolder">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>Browse...</string>
        </property>
@@ -164,6 +230,12 @@
      </item>
      <item row="1" column="2">
       <widget class="QPushButton" name="btnModelFolder">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>Browse...</string>
        </property>
@@ -171,6 +243,12 @@
      </item>
      <item row="2" column="2">
       <widget class="QPushButton" name="btnLibraryFolder">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>Browse...</string>
        </property>
@@ -178,6 +256,12 @@
      </item>
      <item row="4" column="2">
       <widget class="QPushButton" name="btnOutputsFolder">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>Browse...</string>
        </property>
@@ -185,6 +269,18 @@
      </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="txtCIMFolder">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>375</width>
+         <height>16</height>
+        </size>
+       </property>
        <property name="text">
         <string>No file selected!</string>
        </property>
